--- a/app/src/main/res/layout/carousel_notification.xml
+++ b/app/src/main/res/layout/carousel_notification.xml
@@ -11,7 +11,42 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:visibility="visible">
 
+            <TextView
+                android:id="@+id/tvCarousalTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+
+                android:singleLine="true"
+                android:layout_marginTop="10dp"
+                android:text="¡Vamos a actualizar tu oficina virtual!"
+                android:textSize="16sp"
+                android:textColor="@color/carousalTitleTextColor"
+                android:textStyle="bold"
+                android:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/tvCarousalContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:padding="2dp"
+                android:singleLine="false"
+                android:layout_marginBottom="6dp"
+                android:textSize="14sp"
+                android:text="Presiona en el botón Actualizar para que disfrutes de nuevas y mejores experiencias"
+                android:textColor="@color/carousalDescriptionTextColor"
+                android:visibility="visible"/>
+
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -30,27 +65,57 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="3dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="0dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
-                    android:background="@drawable/carousal_card_item"
                     android:orientation="vertical"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="5dp"
-                    android:paddingTop="5dp"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="0dp"
+                    android:paddingRight="0dp"
+                    android:paddingTop="0dp"
                     android:clickable="true">
 
-                    <ImageView
-                        android:id="@+id/ivImageLeft"
+
+
+                    <ViewFlipper
+                        android:id="@+id/viewFlipper"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_carousal_icon"
-                        android:visibility="visible"/>
+                        android:layout_height="match_parent"
+                        android:autoStart="true"
+                        android:flipInterval="2500"
+                        android:inAnimation="@android:anim/slide_in_left"
+                        android:outAnimation="@android:anim/slide_out_right">
+
+                        <ImageView
+                            android:id="@+id/ivImageLeft"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/three"
+                            android:visibility="visible"
+                            />
+                        <ImageView
+                            android:id="@+id/ivImageLefts"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/four"
+                            android:visibility="visible" />
+                        <ImageView
+                            android:id="@+id/ivImageLeftd"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/five"
+                            android:visibility="visible" />
+                    </ViewFlipper>
                 </LinearLayout>
 
 
@@ -59,22 +124,22 @@
 
             <ImageView
                 android:id="@+id/ivArrowRight"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="76dp"
+                android:layout_height="64dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:background="#80ffffff"
+
                 android:clickable="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_carousal_right_icon" />
 
             <ImageView
                 android:id="@+id/ivArrowLeft"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="76dp"
+                android:layout_height="64dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:background="#80ffffff"
+
                 android:clickable="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_carousal_left_arrow" />
