--- a/app/src/main/res/layout/slider_item.xml
+++ b/app/src/main/res/layout/slider_item.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
     <ImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:contentDescription="@string/app_name"
@@ -10,3 +19,10 @@
         android:visibility="visible"
         />
 
+    <TextView
+        android:id="@+id/tvi"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:visibility="invisible"/>
+</LinearLayout>
